--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -176,9 +176,38 @@ header ul li {
 .tesis {
   width: 100%;
   display: flex;
+  flex-direction: column;
 }
 
+.contenedor{
+  width: 100%;
+  display: flex;
+}
 
-.vid-cont video{
+.videof {
   width: 60%;
+}
+
+video{
+  max-width: 100%;
+}
+
+.tesis-info {
+  width: 40%;
+}
+
+.tesis-info .img-cont{
+  width: 35%;
+  margin: 1rem 1rem;
+}
+
+.tesis-info img{
+  width: 100%;
+
+}
+
+.tesis .fisma,
+.tesis .research{
+  display: flex;
+
 }
