--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,15 +12,25 @@ html {
 }
 
 
+
 header{
-  display: flex;
-  justify-content: space-between;
   /*padding: 1rem 1.5rem;*/
-  background-color: white;
   width: 100%;
   position: fixed;
   z-index: 10;
   height: 4rem;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+
+}
+
+#desktop-header {
+  display: flex;
+  justify-content: space-between;
+  /*padding: 1rem 1.5rem;*/
+  background-color: white;
+
 }
 
 header .logo {
@@ -46,6 +56,23 @@ header ul {
 header ul li {
   padding: 0 0.5rem;
   line-height: 2rem;
+}
+
+#mobile-header {
+  display: none;
+}
+
+@media only screen and (max-width: 480px) {
+
+  #desktop-header{
+    display: none;
+  }
+
+  #mobile-header{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 /* Banner */
@@ -95,9 +122,6 @@ header ul li {
   color: white;
 }
 
-.mobile-header {
-  display: none;
-}
 
 
 /* BUSINESS */
