--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,6 +22,7 @@ header{
   display: flex;
   justify-content:center;
   align-items: center;
+  background-color: white;
 
 }
 
@@ -29,7 +30,8 @@ header{
   display: flex;
   justify-content: space-between;
   /*padding: 1rem 1.5rem;*/
-  background-color: white;
+
+  width: 100%;
 
 }
 
