--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -155,13 +155,13 @@ header ul li {
   }
 
   .banner-info h3 {
-    padding: 0 1rem;
+    padding: 0 1rem 2rem 1rem;
     font-size: 1.5rem;
   }
 
   .banner-info .button {
-    margin: 1.5rem 1rem 2rem 1rem;
-    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
 
   }
 }
@@ -249,6 +249,19 @@ header ul li {
   .business-info {
     width: 100%;
   }
+
+  .material {
+    flex-direction: column;
+  }
+
+  .business-info img{
+    width: 90%;
+
+  }
+
+
+
+
 }
 
 /*main*/
